- Fixed Chat overlapping into settings

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -56,7 +56,7 @@
 
     height: 50%;
 
-    z-index: 50;
+    z-index: 1;
 
     width: 30%;
     position: absolute;
